<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.2</version>
        <relativePath/>
    </parent>

    <groupId>com.springairag</groupId>
    <artifactId>spring-ai-rag</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Spring AI RAG</name>
    <description>基于 Spring AI 的通用 RAG (检索增强生成) 服务框架</description>

    <properties>
        <java.version>17</java.version>
        <spring-ai.version>1.1.2</spring-ai.version>
        <springdoc.version>2.6.0</springdoc.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <modules>
        <module>spring-ai-rag-api</module>
        <module>spring-ai-rag-core</module>
        <module>spring-ai-rag-starter</module>
        <module>spring-ai-rag-documents</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Swagger Annotations -->
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>2.2.22</version>
            </dependency>
            <!-- 本项目模块版本管理 -->
            <dependency>
                <groupId>com.springairag</groupId>
                <artifactId>spring-ai-rag-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.springairag</groupId>
                <artifactId>spring-ai-rag-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.springairag</groupId>
                <artifactId>spring-ai-rag-documents</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.springairag</groupId>
                <artifactId>spring-ai-rag-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>1.20.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring AI 模块（BOM 在多模块中可能不传递，显式声明） -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-model</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-client-chat</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-commons</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-rag</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-vector-store</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-advisors-vector-store</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
